with PollingFlightInfo